--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<!-- 
+
 <html>
 <head>
     <title>Tea Cozy</title>
@@ -35,30 +37,32 @@
             </ul>
         </div>
         <div class="location">
-            <h2>Locations</h2>
-                <div class="l1">
-                    <h4>Downtown</h4>
-                    <ul>
-                        <li>384 West 4th St</li>
-                        <li>Suite 108</li>
-                        <li>Portland, Maine</li>
-                    </ul>
-                </div>
-                <div class="l1">
-                    <h4>East Bayside</h4>
-                    <ul>
-                        <li>3433 Pisherman's Avenue</li>
-                        <li>(Northwest Corner</li>
-                        <li>Portland, Maine</li>
-                    </ul>
-                </div>
-                <div class="l1">
-                    <h4>Oakdale</h4>
-                    <ul>
-                        <li>515 Cresent Avenue</li>
-                        <li>Second Floor</li>
-                        <li>Portland, Maine</li>
-                    </ul>
+            <h2 class="fuckme">Locations</h2>
+                <div class="location-l1">
+                    <div class="l1">
+                        <h4>Downtown</h4>
+                        <ul>
+                            <li>384 West 4th St</li>
+                            <li>Suite 108</li>
+                            <li>Portland, Maine</li>
+                        </ul>
+                    </div>
+                    <div class="l1">
+                        <h4>East Bayside</h4>
+                        <ul>
+                            <li>3433 Pisherman's Avenue</li>
+                            <li>(Northwest Corner</li>
+                            <li>Portland, Maine</li>
+                        </ul>
+                    </div>
+                    <div class="l1">
+                        <h4>Oakdale</h4>
+                        <ul>
+                            <li>515 Cresent Avenue</li>
+                            <li>Second Floor</li>
+                            <li>Portland, Maine</li>
+                        </ul>
+                    </div>
                 </div>
         </div>
     </body>
@@ -74,4 +78,26 @@
         </div>
     </footer>
 </main>
+</html>
+
+-->
+
+<html>
+    <head>
+        <title>Tea Cozy</title>
+        <link rel="stylesheet" href="Resources/index.css">
+    </head>
+
+    <main>
+        <!-- Header/Nav Bar -->
+        <div class="header">
+            <img src="/Resources/img-tea-cozy-logo.webp" class="logo">
+            <ul class="nav">
+                <a href="#mission"><li>Mission</li></a>
+                <a href="#featured"><li>Missions</li></a>
+                <a href="#locations"><li>Locations</li></a>
+            </ul>
+        </div>
+
+    </main>
 </html>
