--- a/index.html
+++ b/index.html
@@ -94,9 +94,18 @@
             <img src="/Resources/img-tea-cozy-logo.webp" class="logo">
             <ul class="nav">
                 <a href="#mission"><li>Mission</li></a>
-                <a href="#featured"><li>Missions</li></a>
+                <a href="#featured"><li>Featured</li></a>
                 <a href="#locations"><li>Locations</li></a>
             </ul>
+        </div>
+        <!-- Mission -->
+        <div id="mission">
+            <div class="mission-container">
+                <div class="text-over">
+                    <h2>Our Mission</h2>
+                    <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Oragnic Tea</h4>
+                </div>
+            </div>
         </div>
 
     </main>
