--- a/index.html
+++ b/index.html
@@ -107,6 +107,33 @@
                 </div>
             </div>
         </div>
-
+        <!-- Feature -->
+        <div id="featured">
+            <h2>Tea of the Month</h2>
+            <h4>What's Steeping at The Tea Cozy</h4>
+        </div>
+        <div class="feature-container">
+            <div class="feature">
+                <img src="/Resources/img-berryblitz.webp">
+                <h4>Fall Berry Blitz Tea</h4>
+            </div>
+            <div class="feature">
+                <img src="/Resources/img-spiced-rum.webp">
+                <h4>Spiced Rum Tea</h4>
+            </div>
+            <div class="feature">
+                <img src="/Resources/img-donut.webp">
+                <h4>Seasonal Donuts</h4>
+            </div> 
+            <div class="feature">    
+                <img src="/Resources/img-myrtle-ave.webp">
+                <h4>Myrtle Ave Tea</h4>
+            </div> 
+            <div class="feature">
+                <img src="/Resources/img-bedford-bizarre.jpg">
+                <h4>Bedford Bizarre Tea</h4>
+            </div>
+        </div>
+    
     </main>
 </html>
