needs work, needs to use flex systems

--- a/index.html
+++ b/index.html
@@ -134,6 +134,45 @@
                 <h4>Bedford Bizarre Tea</h4>
             </div>
         </div>
+        <!-- Locations -->
+        <div id="locations">
+        </div>
+        <div class="banner">
+            <div class="text-top">
+                <h2>Locations</h2>
+            </div>
+            <div class="box-container">
+                <div class="box">
+                    <h3>Downtown</h3>
+                    <p>383 West 4th St</p>
+                    <p>Suite 108</p>
+                    <p>Portland, Maine</p>
+                </div>
+                <div class="box">
+                    <h3>East Bayside</h3>
+                    <p>3433 Pishermans Avenue</p>
+                    <p>(Northwest Corner)</p>
+                    <p>Portland, Maine</p>
+                </div>
+                <div class="box">
+                    <h3>Oakdale</h3>
+                    <p>515 Cresent Avenue</p>
+                    <p>Second Floor</p>
+                    <p>Portland, Maine</p>
+                </div>
+            </div>
+        </div>
+        <!-- Footer -->
+        <div class="footer">
+            <div class="contact">
+                <h1>The Tea Cozy</h1>
+                <h5>contact@theteacozy.com</h5>
+                <h5>917-555-8904</h5>
+            </div>
+            <div class="copy">
+                <p>copyright The Tea Cozy 2017</p>
+            </div>
+        </div>
     
     </main>
 </html>
