--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
         <!-- Header/Nav Bar -->
         <div class="header">
             <img src="/Resources/img-tea-cozy-logo.webp" class="logo">
-            <ul class="nav">
-                <a href="#mission"><li>Mission</li></a>
-                <a href="#featured"><li>Featured</li></a>
-                <a href="#locations"><li>Locations</li></a>
-            </ul>
+            <div class="nav">
+                <a href="#mission"><div>Mission</div></a>
+                <a href="#featured"><div>Featured</div></a>
+                <a href="#locations"><div>Locations</div></a>
+            </div>
         </div>
         <!-- Mission -->
         <div id="mission">
